Constants impl (#5)
Add error constants
Small code refactor