@@ -5,7 +5,6 @@ import com.chelex.phonebook.domain.entity.Contact;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ContactConverter {
@@ -13,7 +12,7 @@ public class ContactConverter {
     public List<ContactDto> convert(List<Contact> contacts) {
         return contacts.stream()
                 .map(this::convert)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public ContactDto convert(Contact contact) {
